--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.23.11",
-    "next": "^15.4.4",
+    "next": "15.4.10",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-use-measure": "^2.1.7",
